--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* 
+
+https://www.freakyjolly.com/angular-rxjs-debounce-time-optimize-search-for-server-response/#.XwxISigzbIW
+
+*/
